# devenv-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
benchmarks/: venv_performance.py
src/devenv_mcp/: __init__.py  server.py
src/devenv_mcp/resources/: __init__.py  providers.py
src/devenv_mcp/tools/: __init__.py  docker.py  environment.py  health.py  process.py  venv.py
src/devenv_mcp/utils/: __init__.py  commands.py  docker_client.py  logging_config.py  platform.py
tests/: __init__.py  conftest.py  test_docker.py  test_health.py  test_process.py  test_venv.py
