[project]
name = "devenv-mcp"
version = "0.1.0"
description = "MCP server for managing local development environments - Docker, venvs, databases, and services"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Azaan" }
]
keywords = ["mcp", "docker", "development", "devops", "automation"]

dependencies = [
    "mcp[cli]>=1.2.0",
    "docker>=7.0.0",
    "psutil>=5.9.0",
    "psycopg[binary]>=3.1.0",
    "redis>=5.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.4.0",
]

[project.scripts]
devenv-mcp = "devenv_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/devenv_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long - we handle this with line-length

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
